feat/add prettier

--- a/apps/docs/src/pages/tokens/fonts.stories.mdx
+++ b/apps/docs/src/pages/tokens/fonts.stories.mdx
@@ -1,10 +1,10 @@
-import { Meta } from "@storybook/addon-docs";
-import { TokensGrid } from "../../components/TokensGrid";
-import { fonts } from "@whatanime/design-tokens";
+import { Meta } from '@storybook/addon-docs';
+import { TokensGrid } from '../../components/TokensGrid';
+import { fonts } from '@whatanime/design-tokens';
 
-<Meta title="Tokens/Font Familie" />
+<Meta title="Tokens/Font Family" />
 
-# Font Familie
+# Font Family
 
 Essa é a documentação de espaçamentos do projeto.
 
