--- a/apps/docs/src/pages/tokens/colors.stories.mdx
+++ b/apps/docs/src/pages/tokens/colors.stories.mdx
@@ -1,5 +1,5 @@
-import { Meta } from "@storybook/addon-docs";
-import { ColorsGrid } from "../../components/ColorsGrid";
+import { Meta } from '@storybook/addon-docs';
+import { ColorsGrid } from '../../components/ColorsGrid';
 
 <Meta title="Tokens/Colors" />
 
