--- a/apps/docs/src/pages/tokens/font-weights.stories.mdx
+++ b/apps/docs/src/pages/tokens/font-weights.stories.mdx
@@ -1,6 +1,6 @@
-import { Meta } from "@storybook/addon-docs";
-import { TokensGrid } from "../../components/TokensGrid";
-import { fontWeights } from "@whatanime/design-tokens";
+import { Meta } from '@storybook/addon-docs';
+import { TokensGrid } from '../../components/TokensGrid';
+import { fontWeights } from '@whatanime/design-tokens';
 
 <Meta title="Tokens/Font Weights" />
 
