--- a/apps/docs/src/pages/tokens/line-height.stories.mdx
+++ b/apps/docs/src/pages/tokens/line-height.stories.mdx
@@ -1,6 +1,6 @@
-import { Meta } from "@storybook/addon-docs";
-import { TokensGrid } from "../../components/TokensGrid";
-import { lineHeights } from "@whatanime/design-tokens";
+import { Meta } from '@storybook/addon-docs';
+import { TokensGrid } from '../../components/TokensGrid';
+import { lineHeights } from '@whatanime/design-tokens';
 
 <Meta title="Tokens/Line Heights" />
 
